försökte saker, gick inte bra

--- a/index.html
+++ b/index.html
@@ -8,13 +8,22 @@
 </head>
 <body>
     <main>
-        <header class="Hero">
-            <img src="images/Nature.jpeg" alt="">
-            <div class="box">
-                <h1>NYHET!</h1>
-                <p>väldigt cool nyhet här till vänster, du borde köpa genom att trycka på knappen nedan nu!</p>
-            </div>
+        <header class="TopBar">
+
         </header>
+        <div class="NavBar">
+
+        </div>
+        <div class="page">
+            <header class="Hero">
+                <img src="images/placeholderimg2.png" alt="">
+                <div class="box">
+                    <h1>NYHET!</h1>
+                    <p>Väldigt cool nyhet här till vänster, du borde köpa genom att trycka på knappen nedan nu!</p>
+                    <a href="">Kolla in!</a>
+                </div>
+            </header>
+        </div>
     </main>
 </body>
 </html>
