--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 <body>
     <main>
         <header class="TopBar">
+            <img src="images/goobr.svg" alt="">
 
         </header>
         <div class="NavBar">
+            <ul>
+                <li> <a href="">Knapp</a></li>
+                <li> <a href="">Knapp</a></li>
+                <li> <a href="">Knapp</a></li>
+                <li> <a href="">Knapp</a></li>
+                <li> <a href="">Knapp</a></li>
+            </ul>
 
         </div>
         <div class="page">
@@ -19,7 +27,7 @@
                 <img src="images/placeholderimg2.png" alt="">
                 <div class="box">
                     <h1>NYHET!</h1>
-                    <p>Väldigt cool nyhet här till vänster, du borde köpa genom att trycka på knappen nedan nu!</p>
+                    <p>Väldigt cool nyhet som är helt ny och aldrig förut sedd, du borde köpa genom att trycka på knappen nedan nu!</p>
                     <a href="">Kolla in!</a>
                 </div>
             </header>
