gjorde lite grejer, css är svårt :(

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
     <main>
         <header class="TopBar">
             <img src="images/goobr.svg" alt="">
+            <ul>
+                <li><a href=""><img src="images/home.svg" alt=""></a></li>
+                <li><a href=""><img src="images/home.svg" alt=""></a></li>
+                <li><a href=""><img src="images/home.svg" alt=""></a></li>
+            </ul>
 
         </header>
         <div class="NavBar">
             <ul>
-                <li> <a href="">Knapp</a></li>
-                <li> <a href="">Knapp</a></li>
-                <li> <a href="">Knapp</a></li>
-                <li> <a href="">Knapp</a></li>
-                <li> <a href="">Knapp</a></li>
+                <li> <a href="">Hem</a></li>
+                <li> <a href="">Köp</a></li>
+                <li> <a href="">Om Oss</a></li>
+                <li> <a href="">Kontakt</a></li>
             </ul>
 
         </div>
