Slog mitt huvud mot väggen och kom ingen vart 👍

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <main>
         <header class="TopBar">
+            <div class="empty"></div>
             <img src="images/goobr.svg" alt="">
             <ul>
                 <li><a href=""><img src="images/home.svg" alt=""></a></li>
-                <li><a href=""><img src="images/home.svg" alt=""></a></li>
-                <li><a href=""><img src="images/home.svg" alt=""></a></li>
+                <li><a href=""><img src="images/shop.svg" alt=""></a></li>
+                <li><a href=""><img src="images/profile.svg" alt=""></a></li>
             </ul>
 
         </header>
