fixade äntligen topbar, fortsatte lägga på lite grejer

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     <a href="">Kolla in!</a>
                 </div>
             </header>
+            <div class="infopage">
+                <img src="images/woah.png" alt="">
+            </div>
         </div>
     </main>
 </body>
