fixade typ en till liten sak på landing pagen

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <header class="TopBar">
             <div class="empty"></div>
-            <img src="images/goobr.svg" alt="">
+            <img  class="logo" src="images/goobr.svg" alt="">
             <ul>
                 <li><a href=""><img src="images/home.svg" alt=""></a></li>
                 <li><a href=""><img src="images/shop.svg" alt=""></a></li>
@@ -38,6 +38,15 @@
             </header>
             <div class="infopage">
                 <img src="images/woah.png" alt="">
+                <div class="empty2"></div>
+
+                <div class="infoText">
+                    <div class="container">
+                        <h1>Välkommen till Goober!</h1>
+                        <p>Vi är ett företag som är här för att sprida glädje på det bästa sätt vi kan, och förhoppningsvis göra det svåra lite lättare!</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </main>
