la till footer och fixade till infopage classen lite

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <a href="">Kolla in!</a>
                 </div>
             </header>
+
             <div class="infopage">
                 <img src="images/woah.png" alt="">
                 <div class="empty2"></div>
@@ -48,6 +49,13 @@
                 </div>
 
             </div>
+
+            <footer class="footer">
+                <p>Denna websida är gjort för ett skol-projekt av mig :D</p>
+
+            </footer>
+
+
         </div>
     </main>
 </body>
