försöka börja på grafik-uppgiften

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
             <div class="empty"></div>
             <img  class="logo" src="images/goobr.svg" alt="">
             <ul>
-                <li><a href=""><img src="images/home.svg" alt=""></a></li>
+                <li><a href="index.html"><img src="images/home.svg" alt=""></a></li>
                 <li><a href=""><img src="images/shop.svg" alt=""></a></li>
                 <li><a href=""><img src="images/profile.svg" alt=""></a></li>
             </ul>
 
         </header>
         <div class="NavBar">
-            <ul>
-                <li> <a href="">Hem</a></li>
+            <ul class="list_base list_1">
+                <li> <a href="index.html">Hem</a></li>
                 <li> <a href="">Köp</a></li>
+                <li> <a href="grafik.html">Grafik</a></li>
                 <li> <a href="">Om Oss</a></li>
                 <li> <a href="">Kontakt</a></li>
             </ul>
@@ -31,8 +32,8 @@
             <header class="Hero">
                 <img src="images/placeholderimg2.png" alt="">
                 <div class="box">
-                    <h1>NYHET!</h1>
-                    <p>Väldigt cool nyhet som är helt ny och aldrig förut sedd, du borde köpa genom att trycka på knappen nedan nu!</p>
+                    <h1 class="Header_Text">NYHET!</h1>
+                    <p class="text_pink">Väldigt cool nyhet som är helt ny och aldrig förut sedd, du borde köpa genom att trycka på knappen nedan nu!</p>
                     <a href="">Kolla in!</a>
                 </div>
             </header>
@@ -43,7 +44,7 @@
 
                 <div class="infoText">
                     <div class="container">
-                        <h1>Välkommen till Goober!</h1>
+                        <h1 class="Header_Text">Välkommen till Goober!</h1>
                         <p>Vi är ett företag som är här för att sprida glädje på det bästa sätt vi kan, och förhoppningsvis göra det svåra lite lättare!</p>
                     </div>
                 </div>
