gjorde typ klart grafik sidan

--- a/grafik.html
+++ b/grafik.html
@@ -55,9 +55,36 @@
                         <li><a href="">Hej!</a></li>
                     </ul>
                 </div>
+                <div class="text_box">
+                    <h2 class="Header_Text"> Färger och text på färg</h2>
+                </div>
+                <div class="Colors">
+                    <div class="ColorBox color1">
+                        <p>Primary</p>
+                    </div>
+                    <div class="ColorBox color2">
+                        <p>Secondary</p>
+                    </div>
+                    <div class="ColorBox color3">
+                        <p>Dark</p>
+                    </div>
+                    <div class="ColorBox color4">
+                        <p>Light</p>
+                    </div>
+                </div>
+                <div class="text_box">
+                    <h2 class="Header_Text">Image Profile</h2>
+                    <div class="image_box">
+                        <img src="images/woah.png" alt="">
+                        <img src="images/placeholderimg2.png" alt="">
+                    </div>
+                </div>
             </div>
-            
         </div>
+        <footer class="footer">
+            <p>Denna websida är gjort för ett skol-projekt av mig :D</p>
+
+        </footer>
     </main>
     
 </body>
