gjorde klart grafik sidan och försökte göra den lite mer responsiv

--- a/grafik.html
+++ b/grafik.html
@@ -31,6 +31,10 @@
         <div class="page">
             <div class="profile">
                 <div class="text_box">
+                    <h1 class="Header_Text">Grafisk Profil</h1>
+                    <p>Här så kan du se det mesta som finns att veta gällande hur detta hittepå-företagets websida är planerad att vara designad och lite om vilka färger och bilder som används!</p>
+                </div>
+                <div class="text_box">
                     <h1 class="Header_Text">HuvudRubrik 1</h1>
                     <h2 class="Header_Text">HuvudRubrik 2</h2>
                     <h3 class="Header_Text">HuvudRubrik 3</h3>
@@ -38,7 +42,7 @@
 
                 </div>
                 <div class="text_box">
-                    <h2 class="Header_Text"> Rubrik</h2>
+                    <h2 class="Header_Text"> Brödtext med Rubrik</h2>
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis lacus facilisis, suscipit libero id, venenatis mi. Sed tincidunt ut lorem eu vehicula. Nulla facilisi. Vestibulum fermentum magna nec consequat suscipit. Ut elementum, odio sit amet condimentum sagittis, felis eros volutpat nulla, vitae feugiat nibh nunc vel mi. Nullam tincidunt volutpat sapien nec efficitur. Curabitur non lorem odio. Mauris laoreet odio justo, at fermentum massa scelerisque lobortis.</p>
                 </div>
                 <div class="text_box">
