typ började på något

--- a/grafik.html
+++ b/grafik.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Goober</title>
 </head>
 <body>
     <main>
@@ -23,7 +23,7 @@
                 <li> <a href="index.html">Hem</a></li>
                 <li> <a href="">Köp</a></li>
                 <li> <a href="grafik.html">Grafik</a></li>
-                <li> <a href="">Om Oss</a></li>
+                <li> <a href="omOss.html">Om Oss</a></li>
                 <li> <a href="">Kontakt</a></li>
             </ul>
 
