--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li> <a href="index.html">Hem</a></li>
                 <li> <a href="">Köp</a></li>
                 <li> <a href="grafik.html">Grafik</a></li>
-                <li> <a href="">Om Oss</a></li>
+                <li> <a href="omOss.html">Om Oss</a></li>
                 <li> <a href="">Kontakt</a></li>
             </ul>
 
