Gjorde lite adjustments

--- a/omOss.html
+++ b/omOss.html
@@ -34,25 +34,33 @@
                     <h1 class="Header_Text"> Om Oss</h1>
                     <p>Hej! Vi är Goober och vi är ett företag som har allt med gossedjur att göra!</p>
                     <p>Vår filosofi här på Goober är att alla typer av känslor är det viktigaste inom alla våra liv, likväl för de yngre som de äldre. Det är därför vi har valt att skapa våra gossedjur för att försöka fånga dessa känslor och göra dem till små krambara vänner för hela världens njutning.</p>
-                    <p>Våra gossedjur går även lätt att posera som gör att potentialen till att uttrycka sig blir nästan oändlig!</p>
+                    <p>Våra gossedjur går även lätt att posera som gör att potentialen för att uttrycka sig blir nästan oändlig!</p>
                 </div>
-                <div class="Employees">
-                    <div class="Employee_card">
-                        <img src="images/placeholder.png" alt="">
-                        <h3 class="Header_Text">Jobbare</h3>
-                        <p>jobbar med att vara cool</p>
+                <div class="pink_box">
+                    <h1 class="Header_Text white">Anställda</h1>
+                    <div class="Employees">
+                        <div class="Employee_card">
+                            <img src="images/man.jpg" alt="">
+                            <h3 class="Header_Text">Markus</h3>
+                            <h4 class="Header_Text">design</h4>
+                            <p>jobbar med att vara cool</p>
+                        </div>
+                        <div class="Employee_card">
+                            <img src="images/woman2.png" alt="">
+                            <h3 class="Header_Text">Evalina</h3>
+                            <h4 class="Header_Text">reklam</h4>
+                            <p>jobbar med att vara cool</p>
+                        </div>
+                        <div class="Employee_card">
+                            <img src="images/man22.png" alt="">
+                            <h3 class="Header_Text">Jonathan</h3>
+                            <h4 class="Header_Text">Chef</h4>
+                            <p>jobbar med att vara cool</p>
+                        </div>
                     </div>
-                    <div class="Employee_card">
-                        <img src="images/placeholder.png" alt="">
-                        <h3 class="Header_Text">Jobbare</h3>
-                        <p>jobbar med att vara cool</p>
-                    </div>
-                    <div class="Employee_card">
-                        <img src="images/placeholder.png" alt="">
-                        <h3 class="Header_Text">Jobbare</h3>
-                        <p>jobbar med att vara cool</p>
-                    </div>
+
                 </div>
+                
             </div>
            
 
