--- a/grafik.html
+++ b/grafik.html
@@ -35,10 +35,10 @@
                     <p>Här så kan du se det mesta som finns att veta gällande hur detta hittepå-företagets websida är planerad att vara designad och lite om vilka färger och bilder som används!</p>
                 </div>
                 <div class="text_box">
-                    <h1 class="Header_Text">HuvudRubrik 1</h1>
-                    <h2 class="Header_Text">HuvudRubrik 2</h2>
-                    <h3 class="Header_Text">HuvudRubrik 3</h3>
-                    <h4 class="Header_Text">HuvudRubrik 4</h4>
+                    <h1 class="Header_Text">Rubrik 1</h1>
+                    <h2 class="Header_Text">Rubrik 2</h2>
+                    <h3 class="Header_Text">Rubrik 3</h3>
+                    <h4 class="Header_Text">Rubrik 4</h4>
 
                 </div>
                 <div class="text_box">
