Gjorde klart om oss sidan, typ

--- a/omOss.html
+++ b/omOss.html
@@ -60,7 +60,15 @@
                     </div>
 
                 </div>
-                
+                <div class="location_box">
+                    <img src="images/Sweden2.png" alt="">
+                    <div class="text_box adapt">
+                        <h1 class="Header_Text">Vart ligger vi?</h1>
+                        <p>Vi är baserade i sverige och ligger därför här omkring</p>
+                        <p>Våra lokaler ligger runt toppen av sverige, det är här som all magi händer!</p>
+
+                    </div>
+                </div>
             </div>
            
 
