la till footer på omoss

--- a/omOss.html
+++ b/omOss.html
@@ -70,9 +70,11 @@
                     </div>
                 </div>
             </div>
-           
-
         </div>
+        <footer class="footer">
+            <p>Denna websida är gjort för ett skol-projekt av mig :D</p>
+
+        </footer>
     </main>
 </body>
 </html>
