Försökte fixa vissa contrast fel

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div class="empty"></div>
             <img  class="logo" src="images/goobr.svg" alt="">
             <ul>
-                <li><a href="index.html"><img src="images/home.svg" alt=""></a></li>
-                <li><a href=""><img src="images/shop.svg" alt=""></a></li>
-                <li><a href=""><img src="images/profile.svg" alt=""></a></li>
+                <li><a href="index.html"><img src="images/home.svg" alt="Home"></a></li>
+                <li><a href=""><img src="images/shop.svg" alt="Shop"></a></li>
+                <li><a href=""><img src="images/profile.svg" alt="Profile"></a></li>
             </ul>
 
         </header>
@@ -33,7 +33,7 @@
                 <img src="images/placeholderimg2.png" alt="">
                 <div class="box">
                     <h1 class="Header_Text">NYHET!</h1>
-                    <p class="text_pink">Väldigt cool nyhet som är helt ny och aldrig förut sedd, du borde köpa genom att trycka på knappen nedan nu!</p>
+                    <p>Väldigt cool nyhet som är helt ny och aldrig förut sedd, du borde köpa genom att trycka på knappen nedan nu!</p>
                     <a href="">Kolla in!</a>
                 </div>
             </header>
