--- a/omOss.html
+++ b/omOss.html
@@ -12,9 +12,9 @@
             <div class="empty"></div>
             <img  class="logo" src="images/goobr.svg" alt="">
             <ul>
-                <li><a href="index.html"><img src="images/home.svg" alt=""></a></li>
-                <li><a href=""><img src="images/shop.svg" alt=""></a></li>
-                <li><a href=""><img src="images/profile.svg" alt=""></a></li>
+                <li><a href="index.html"><img src="images/home.svg" alt="Home"></a></li>
+                <li><a href=""><img src="images/shop.svg" alt="Shop"></a></li>
+                <li><a href=""><img src="images/profile.svg" alt="Profile"></a></li>
             </ul>
 
         </header>
