gjorde en bild mindre i storlek

--- a/omOss.html
+++ b/omOss.html
@@ -40,7 +40,7 @@
                     <h1 class="Header_Text white">Anställda</h1>
                     <div class="Employees">
                         <div class="Employee_card">
-                            <img src="images/man.jpg" alt="">
+                            <img src="images/man_smaller.png" alt="">
                             <h3 class="Header_Text">Markus</h3>
                             <h4 class="Header_Text">design</h4>
                             <p>jobbar med att vara cool</p>
